--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": " A basic starter for an express.js API with Typescript",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "nodemon src/index.ts",
+    "start": "ts-node src/app.ts",
+    "dev": "nodemon src/app.ts",
     "build": "tsc",
     "lint": "eslint --fix src test",
     "test": "jest",
@@ -17,18 +17,35 @@
     "type": "git",
     "url": "https://github.com/w3cj/express-api-starter.git"
   },
+  "type": "commonjs",
   "license": "MIT",
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.12.22",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@types/ioredis": "^5.0.0",
+    "@types/redis": "^4.0.11",
+    "basic-auth-connect": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "cors": "^2.8.5",
+    "dateformat": "^5.0.3",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.0.0",
+    "ioredis": "^5.3.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
-    "node-media-server": "^2.6.2",
+    "rate-limit-redis": "^4.2.0",
+    "redis": "^4.6.12",
+    "socket.io": "^4.7.4",
     "svix": "^1.14.0",
-    "types": "^0.1.1"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tokei-media-server": "TideOPL/TokeiMediaServer",
+    "types": "^0.1.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
