--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-player": "^2.12.0",
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.2.0",
