--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@reduxjs/toolkit": "^2.1.0",
     "@rvxlab/tailwind-plugin-ios-full-height": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.3.1",
     "axios": "^1.6.2",
@@ -28,7 +29,9 @@
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-player": "^2.12.0",
+    "react-redux": "^9.1.0",
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
