--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@types/ioredis": "^5.0.0",
     "@types/redis": "^4.0.11",
     "basic-auth-connect": "^1.0.0",
+    "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
