--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@types/ioredis": "^5.0.0",
     "@types/redis": "^4.0.11",
+    "axios": "^1.6.7",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
