--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           cd /var/www/tokei-web/
-          git pull
+          echo ${{ secrets.PASSWORD }} | sudo -S git pull
           cd client
           sudo yarn build
-          ${{ secrets.PASSWORD }}
+          echo ${{ secrets.PASSWORD }} | sudo -S yarn build
           cd ..
-          pm2 restart 0
-          pm2 restart 1
+          echo ${{ secrets.PASSWORD }} | sudo -S pm2 restart 0
+          echo ${{ secrets.PASSWORD }} | sudo -S pm2 restart 1
