--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "helmet": "^7.0.0",
     "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
+    "micro": "^10.0.1",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
     "rate-limit-redis": "^4.2.0",
