--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.12.22",
     "@radix-ui/react-icons": "^1.3.0",
+    "@types/bad-words": "^3.0.3",
     "@types/ioredis": "^5.0.0",
     "@types/redis": "^4.0.11",
     "axios": "^1.6.7",
+    "bad-words": "^3.0.4",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
