--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@types/bad-words": "^3.0.3",
     "@types/ioredis": "^5.0.0",
+    "@types/node-cron": "^3.0.11",
     "@types/redis": "^4.0.11",
     "axios": "^1.6.7",
     "bad-words": "^3.0.4",
@@ -42,6 +43,7 @@
     "micro": "^10.0.1",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.6.12",
     "socket.io": "^4.7.4",
