--- a/client/package.json
+++ b/client/package.json
@@ -31,12 +31,14 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.308.0",
     "next": "^13.4.2",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-player": "^2.12.0",
     "react-redux": "^9.1.0",
     "socket.io-client": "^4.7.4",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.21.4"
