--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^1.7.9",
     "@clerk/types": "^3.48.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
